--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,9 @@
 {
   "name": "1-to-4",
   "type": "ionic1",
-  "integrations": {},
+  "integrations": {
+    "gulp": {}
+  },
   "watchPatterns": [
     "scss/**/*",
     "www/**/*",
